# ft-wam-teleop

./: CMakeLists.txt  CMakeLists2.txt  README.md
config/follower-gecko-hand-horizontal/: follower.conf  wam7w.conf
config/follower-gecko-hand-horizontal/calibration_data/wam7w/: gravitycal.conf  zerocal.conf
config/follower-gecko-skid-hand/: wam7w.conf
config/follower-gecko-skid-hand/calibration_data/wam7w/: gravitycal.conf  zerocal.conf
config/leader-zeus-7dof/calibration_data/wam7w/: gravitycal.conf
scripts/: can_init.sh  setup_follower.sh  setup_leader.sh
src/: atift_reader.h  atift_system.h  follower.cpp  follower_ft.cpp  follower_ft.h  leader.cpp  leader_ft.cpp  leader_ft.h  tb_transformation.h  udp_handler_ft.h
src/lib/: atift_system.h  background_state_publisher.h  bj_transformation.h  follower.h  follower_ft.h  leader.h  leader_ft.h  regressor_W.h  udp_handler.cpp  udp_handler.h  udp_handler_ft.cpp
